Prevent pull to refresh on mobile browsers

--- a/wordfind.css
+++ b/wordfind.css
@@ -11,6 +11,7 @@
 
 body {
   overscroll-behavior-y: contain; /* prevent vertical mouse/touchmove from accidentally causing pull-down refresh */
+  overflow-y: hidden
   font: 1em Arial;
 }
 
